<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:background="#2196F3">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_world_text"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat" app:fontFamily="sans-serif"
            android:typeface="sans" android:textSize="24sp" android:lineSpacingExtra="8sp"
            android:textColor="@color/colorAccent" android:textStyle="bold"
            android:background="@color/screenBackground" android:id="@+id/textView2"
            android:layout_marginTop="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintVertical_bias="0.095"/>
    <TextView
            android:text="@string/_0"
            android:layout_width="55dp"
            android:layout_height="115dp"
            android:id="@+id/textView_num"
            android:layout_marginBottom="45dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:textColor="@android:color/background_dark" app:fontFamily="serif" android:textSize="72sp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.513" app:layout_constraintVertical_bias="0.212"
            android:textStyle="bold" android:typeface="sans"
            android:gravity="center"/>
    <Button
            android:text="@string/toast"
            android:onClick="toastMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toast_button"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView_label"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:background="@color/buttonBackground"
            android:layout_marginStart="24dp"/>
    <Button
            android:text="@string/count"
            android:onClick="countMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/count_button" app:layout_constraintEnd_toStartOf="@+id/random_button"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toEndOf="@+id/toast_button"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView_label"
            android:background="@color/buttonBackground"/>
    <Button
            android:text="@string/random"
            android:onClick="randomMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/random_button" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView_label" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/buttonBackground"
            android:layout_marginEnd="24dp"/>

</android.support.constraint.ConstraintLayout>